# SmartPianoEngine

./: .clang-tidy  .envrc  .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION_NOTES.md  Makefile  PROTOCOL.md  PianoTrainerMDJV1.pro  README.md  USAGE.md  engine.nix  flake.nix  garnix.yaml  garnix.yml  moc_GestionSon.cpp  moc_SocketManager.cpp  piano.sf2  smartPianoEngine.nix
.github/workflows/: build-main.yml  build.yml  cd.yml  ci.yml  copilot-setup-steps.yml  nightly.yml  pr-validation.yml  validation.yml
cmake/: Coverage.cmake
include/: AnswerValidator.hpp  BaseAccords.h  BaseAccords.hpp  ChallengeFactory.hpp  ChordGame.hpp  ChordRepository.hpp  GameEngine.hpp  GameManager.h  GameManager.hpp  GenererNoteAleatoire.h  GenererNoteAleatoire.hpp  GestionSon.h  IGameMode.hpp  IMidiInput.hpp  ITransport.hpp  LectureNoteJouee.h  LectureNoteJouee.hpp  Logger.hpp  Message.hpp  Note.hpp  NoteGame.hpp  NoteGenerator.hpp  NoteReader.hpp  RtMidiInput.hpp  SocketManager.h  SocketManager.hpp  UdsTransport.hpp  ValidationNote.h  ValidationNote.hpp
scripts/: generate_coverage.sh
src/: AnswerValidator.cpp  BaseAccords.cpp  CMakeLists.txt  ChallengeFactory.cpp  ChordGame.cpp  ChordRepository.cpp  GameEngine.cpp  GameManager.cpp  GenererNoteAleatoire.cpp  GestionSon.cpp  LectureNoteJouee.cpp  NoteGame.cpp  NoteGenerator.cpp  NoteReader.cpp  RtMidiInput.cpp  SocketManager.cpp  UdsTransport.cpp  ValidationNote.cpp  main.cpp  main_new.cpp  resources.qrc
test/: AnswerValidatorTest.cpp  BaseAccordsTest.cpp  CMakeLists.txt  ChallengeFactoryTest.cpp  ChordGameTest.cpp  ChordRepositoryTest.cpp  GameEngineTest.cpp  GameManagerTest.cpp  GenererNoteAleatoireTest.cpp  LectureNoteJoueeTest.cpp  LoggerTest.cpp  MessageTest.cpp  Mocks.hpp  NoteGameTest.cpp  NoteGeneratorTest.cpp  NoteReaderTest.cpp  NoteTest.cpp  RtMidiInputTest.cpp  SocketManagerTest.cpp  UdsTransportTest.cpp  ValidationNoteTest.cpp  integrationTest.cpp
testMDJ/: BaseAccordsTest.cpp  GameManagerTest.cpp  GenererNoteAleatoireTest.cpp  LectureNoteJoueeTest.cpp  SocketManagerTest.cpp  ValidationNoteTest.cpp
