find_package(doctest REQUIRED)
include(CTest)

set(T1 ChordRepositoryTest)
add_executable(${T1} ${T1}.cpp)
target_include_directories(${T1} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(${T1} PRIVATE ${PROJECT_NAME} doctest::doctest)
add_test(NAME ${T1} COMMAND ${T1})

set(T2 ChordGameTest)
add_executable(${T2} ${T2}.cpp)
target_include_directories(${T2} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(${T2} PRIVATE ${PROJECT_NAME} doctest::doctest)
add_test(NAME ${T2} COMMAND ${T2})

set(T3 GameEngineTest)
add_executable(${T3} ${T3}.cpp)
target_include_directories(${T3} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(${T3} PRIVATE ${PROJECT_NAME} doctest::doctest)
add_test(NAME ${T3} COMMAND ${T3})

set(T5 ChallengeFactoryTest)
add_executable(${T5} ${T5}.cpp)
target_include_directories(${T5} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(${T5} PRIVATE ${PROJECT_NAME} doctest::doctest)
add_test(NAME ${T5} COMMAND ${T5})

set(T7 LoggerTest)
add_executable(${T7} ${T7}.cpp)
target_include_directories(${T7} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(${T7} PRIVATE ${PROJECT_NAME} doctest::doctest)
add_test(NAME ${T7} COMMAND ${T7})

set(T8 MessageTest)
add_executable(${T8} ${T8}.cpp)
target_include_directories(${T8} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(${T8} PRIVATE ${PROJECT_NAME} doctest::doctest)
add_test(NAME ${T8} COMMAND ${T8})

set(T9 NoteTest)
add_executable(${T9} ${T9}.cpp)
target_include_directories(${T9} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(${T9} PRIVATE ${PROJECT_NAME} doctest::doctest)
add_test(NAME ${T9} COMMAND ${T9})

set(T10 NoteGameTest)
add_executable(${T10} ${T10}.cpp)
target_include_directories(${T10} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(${T10} PRIVATE ${PROJECT_NAME} doctest::doctest)
add_test(NAME ${T10} COMMAND ${T10})

set(T11 RtMidiInputTest)
add_executable(${T11} ${T11}.cpp)
target_include_directories(${T11} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(${T11} PRIVATE ${PROJECT_NAME} doctest::doctest)
add_test(NAME ${T11} COMMAND ${T11})

set(T13 UdsTransportTest)
add_executable(${T13} ${T13}.cpp)
target_include_directories(${T13} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(${T13} PRIVATE ${PROJECT_NAME} ${PROJECT_NAME}comm
                                     doctest::doctest)
add_test(NAME ${T13} COMMAND ${T13})

set(T14 AnswerValidatorTest)
add_executable(${T14} ${T14}.cpp)
target_include_directories(${T14} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(${T14} PRIVATE ${PROJECT_NAME} doctest::doctest)
add_test(NAME ${T14} COMMAND ${T14})

set(T15 integrationTest)
add_executable(${T15} ${T15}.cpp)
target_include_directories(${T15} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(${T15} PRIVATE ${PROJECT_NAME} ${PROJECT_NAME}comm
                                     doctest::doctest)
add_test(NAME ${T15} COMMAND ${T15})
